fix: responsive, better alignement and dedicated file to mobile

--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -2,7 +2,8 @@
   body {
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
   }
 
   .cv-container {
@@ -17,15 +18,21 @@
       "left-column"
       "right-column";
     gap: 0;
-    padding: 0.25em;
+    padding: 1em 0.25em !important;
   }
 
   .header {
     font-size: var(--font-size-header);
   }
 
+  .full-name {
+    margin: 1em 0;
+  }
+
   .category {
     background: var(--background-color-responsive-1) !important;
+    padding: 0 !important;
+    margin: 0.5em 0 !important;
   }
 
   .image,
@@ -69,10 +76,10 @@
 }
 
 @media only screen and (max-width: 412px) {
-  //   .cv-container {
-  //     padding: 0;
-  //   }
-  //   .header {
-  //     font-size: calc(var(--font-size-header) - 0%);
-  //   }
+  .cv-container {
+    padding: 0.5em;
+  }
+  .header {
+    font-size: calc(var(--font-size-header) - 5%);
+  }
 }
